mc-o11y-agent, mc-o11y-manager: Add support for getting target list by NS ID and MCI ID
